# todo-list-for-frontend

./: .dockerignore  Dockerfile  README.md  deploy_for_frontend.md  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml
app/: auth.py  config.py  database.py  main.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 0250d0d2e1d9_added_user_and_task_models.py  45d1793bdaa8_added_created_at_updated_at_fields_in_.py  a64eb92ca6a4_updated_datetime_in_todos.py
app/models/: __init__.py  todos.py  users.py
app/routers/: todos.py  users.py
app/utils/: mixins.py
